--- a/Lab_CNN.ipynb
+++ b/Lab_CNN.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -861,43 +861,65 @@
      "text": [
       "Train on 542 samples, validate on 200 samples\n",
       "Epoch 1/30\n",
-      "542/542 [==============================] - 5s 9ms/step - loss: 0.6900 - acc: 0.5646 - val_loss: 0.6806 - val_acc: 0.5300\n",
+      "542/542 [==============================] - 5s 10ms/step - loss: 0.6954 - acc: 0.4742 - val_loss: 0.6803 - val_acc: 0.5000\n",
       "Epoch 2/30\n",
-      "542/542 [==============================] - 5s 8ms/step - loss: 0.6782 - acc: 0.5203 - val_loss: 0.6696 - val_acc: 0.5050\n",
+      "542/542 [==============================] - 5s 9ms/step - loss: 0.6834 - acc: 0.5000 - val_loss: 0.6741 - val_acc: 0.5000\n",
       "Epoch 3/30\n",
-      "542/542 [==============================] - 5s 9ms/step - loss: 0.6695 - acc: 0.5018 - val_loss: 0.6611 - val_acc: 0.5050\n",
+      "542/542 [==============================] - 4s 8ms/step - loss: 0.6789 - acc: 0.5000 - val_loss: 0.6688 - val_acc: 0.5000\n",
       "Epoch 4/30\n",
-      "542/542 [==============================] - 5s 8ms/step - loss: 0.6617 - acc: 0.5074 - val_loss: 0.6524 - val_acc: 0.5050\n",
+      "542/542 [==============================] - 4s 8ms/step - loss: 0.6748 - acc: 0.5000 - val_loss: 0.6640 - val_acc: 0.5000\n",
       "Epoch 5/30\n",
-      "542/542 [==============================] - 4s 8ms/step - loss: 0.6527 - acc: 0.5185 - val_loss: 0.6429 - val_acc: 0.5550\n",
+      "542/542 [==============================] - 4s 8ms/step - loss: 0.6702 - acc: 0.5111 - val_loss: 0.6586 - val_acc: 0.5000\n",
       "Epoch 6/30\n",
-      "542/542 [==============================] - 4s 8ms/step - loss: 0.6418 - acc: 0.5572 - val_loss: 0.6299 - val_acc: 0.5550\n",
+      "542/542 [==============================] - 4s 8ms/step - loss: 0.6658 - acc: 0.5074 - val_loss: 0.6530 - val_acc: 0.5000\n",
       "Epoch 7/30\n",
-      "542/542 [==============================] - 5s 9ms/step - loss: 0.6294 - acc: 0.5867 - val_loss: 0.6178 - val_acc: 0.7650\n",
+      "542/542 [==============================] - 4s 8ms/step - loss: 0.6598 - acc: 0.5111 - val_loss: 0.6495 - val_acc: 0.5250\n",
       "Epoch 8/30\n",
-      "542/542 [==============================] - 5s 9ms/step - loss: 0.6139 - acc: 0.7214 - val_loss: 0.5994 - val_acc: 0.5700\n",
+      "542/542 [==============================] - 4s 8ms/step - loss: 0.6544 - acc: 0.5387 - val_loss: 0.6405 - val_acc: 0.5350\n",
       "Epoch 9/30\n",
-      "542/542 [==============================] - 5s 9ms/step - loss: 0.5934 - acc: 0.7362 - val_loss: 0.5738 - val_acc: 0.7350\n",
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.6462 - acc: 0.5701 - val_loss: 0.6293 - val_acc: 0.5550\n",
       "Epoch 10/30\n",
-      "542/542 [==============================] - 5s 9ms/step - loss: 0.5656 - acc: 0.7804 - val_loss: 0.5480 - val_acc: 0.7650\n",
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.6358 - acc: 0.6273 - val_loss: 0.6160 - val_acc: 0.5850\n",
       "Epoch 11/30\n",
-      "542/542 [==============================] - 5s 9ms/step - loss: 0.5371 - acc: 0.8321 - val_loss: 0.5352 - val_acc: 0.6950\n",
+      "542/542 [==============================] - 7s 13ms/step - loss: 0.6218 - acc: 0.6439 - val_loss: 0.6010 - val_acc: 0.7650\n",
       "Epoch 12/30\n",
-      "542/542 [==============================] - 4s 8ms/step - loss: 0.5133 - acc: 0.8247 - val_loss: 0.4975 - val_acc: 0.8350\n",
+      "542/542 [==============================] - 6s 12ms/step - loss: 0.6054 - acc: 0.7399 - val_loss: 0.5792 - val_acc: 0.7050\n",
       "Epoch 13/30\n",
-      "542/542 [==============================] - 5s 9ms/step - loss: 0.4687 - acc: 0.8413 - val_loss: 0.4414 - val_acc: 0.8850\n",
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.5830 - acc: 0.7786 - val_loss: 0.5515 - val_acc: 0.7650\n",
       "Epoch 14/30\n",
-      "542/542 [==============================] - 6s 10ms/step - loss: 0.4452 - acc: 0.8413 - val_loss: 0.5096 - val_acc: 0.7350\n",
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.5580 - acc: 0.8192 - val_loss: 0.5507 - val_acc: 0.5800\n",
       "Epoch 15/30\n",
-      "542/542 [==============================] - 5s 9ms/step - loss: 0.4346 - acc: 0.8155 - val_loss: 0.3783 - val_acc: 0.9000\n",
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.5211 - acc: 0.8026 - val_loss: 0.5292 - val_acc: 0.8050\n",
       "Epoch 16/30\n",
-      "542/542 [==============================] - 6s 10ms/step - loss: 0.4240 - acc: 0.8210 - val_loss: 0.3801 - val_acc: 0.8850\n",
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.5150 - acc: 0.7804 - val_loss: 0.5304 - val_acc: 0.6150\n",
       "Epoch 17/30\n",
-      "542/542 [==============================] - 5s 9ms/step - loss: 0.3746 - acc: 0.8764 - val_loss: 0.3432 - val_acc: 0.8900\n",
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.4761 - acc: 0.8137 - val_loss: 0.4105 - val_acc: 0.9000\n",
       "Epoch 18/30\n",
-      "542/542 [==============================] - 5s 8ms/step - loss: 0.4004 - acc: 0.8247 - val_loss: 0.3365 - val_acc: 0.9050\n",
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.4531 - acc: 0.8284 - val_loss: 0.3868 - val_acc: 0.9100\n",
       "Epoch 19/30\n",
-      "224/542 [===========>..................] - ETA: 2s - loss: 0.3590 - acc: 0.8571"
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.4191 - acc: 0.8339 - val_loss: 0.3707 - val_acc: 0.8850\n",
+      "Epoch 20/30\n",
+      "542/542 [==============================] - 5s 9ms/step - loss: 0.4117 - acc: 0.8192 - val_loss: 0.3672 - val_acc: 0.8800\n",
+      "Epoch 21/30\n",
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.4066 - acc: 0.8413 - val_loss: 0.3184 - val_acc: 0.9200\n",
+      "Epoch 22/30\n",
+      "542/542 [==============================] - 5s 8ms/step - loss: 0.3320 - acc: 0.8782 - val_loss: 0.2940 - val_acc: 0.9350\n",
+      "Epoch 23/30\n",
+      "542/542 [==============================] - 5s 9ms/step - loss: 0.4125 - acc: 0.8321 - val_loss: 0.3331 - val_acc: 0.8700\n",
+      "Epoch 24/30\n",
+      "542/542 [==============================] - 5s 9ms/step - loss: 0.3045 - acc: 0.8930 - val_loss: 0.3480 - val_acc: 0.8850\n",
+      "Epoch 25/30\n",
+      "542/542 [==============================] - 5s 9ms/step - loss: 0.3600 - acc: 0.8506 - val_loss: 0.2590 - val_acc: 0.9300\n",
+      "Epoch 26/30\n",
+      "542/542 [==============================] - 5s 9ms/step - loss: 0.2938 - acc: 0.8948 - val_loss: 0.3233 - val_acc: 0.8400\n",
+      "Epoch 27/30\n",
+      "542/542 [==============================] - 5s 9ms/step - loss: 0.2913 - acc: 0.8893 - val_loss: 0.3587 - val_acc: 0.8900\n",
+      "Epoch 28/30\n",
+      "542/542 [==============================] - 5s 9ms/step - loss: 0.2629 - acc: 0.9022 - val_loss: 0.2749 - val_acc: 0.9300\n",
+      "Epoch 29/30\n",
+      "542/542 [==============================] - 5s 10ms/step - loss: 0.2941 - acc: 0.8856 - val_loss: 0.2547 - val_acc: 0.9350\n",
+      "Epoch 30/30\n",
+      "542/542 [==============================] - 5s 9ms/step - loss: 0.2300 - acc: 0.9114 - val_loss: 0.2998 - val_acc: 0.9250\n"
      ]
     }
    ],
@@ -911,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -945,16 +967,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.24520404653355643, 0.9261992604530166]"
+       "[0.27468785027736226, 0.913284131301725]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,16 +987,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.32861035002602473, 0.8888888862397936]"
+       "[0.35389582647217643, 0.8611111084620158]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,13 +1277,6 @@
    "source": [
     "results_test"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
